--- a/MustHaveJSP/.settings/org.eclipse.core.resources.prefs
+++ b/MustHaveJSP/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/main/webapp/ch01/directive/inlcude-includeMain.jsp=UTF-8
 encoding/<project>=x-windows-949
